--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-fetch": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-html-parser": "^2.0.2",
     "sass": "^1.26.5"
   },
   "devDependencies": {}
