--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Vardges Vardanyan",
   "license": "ISC",
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.19.0",
     "bootstrap": "^4.4.1",
     "express": "^4.17.1",
     "next": "^9.3.6",
@@ -18,6 +19,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-html-parser": "^2.0.2",
+    "react-vis": "^1.11.7",
     "sass": "^1.26.5"
   },
   "devDependencies": {}
