--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-fetch": "latest",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-facebook": "^8.1.4",
     "react-html-parser": "^2.0.2",
     "react-vis": "^1.11.7",
     "sass": "^1.26.5"
